--- a/OpenEdXMobile/res/values-zh/strings.xml
+++ b/OpenEdXMobile/res/values-zh/strings.xml
@@ -11,7 +11,7 @@
   <!--Enroll Now button text-->
   <string name="enroll_now_button_text">现在加入</string>
   <!--Invitation Only button text-->
-  <string name="invitation_only_button_text">仅限受邀</string>
+  <string name="invitation_only_button_text" tools:ignore="MissingTranslation">仅限受邀</string>
   <!--Effort field name-->
   <string name="effort_field_name">预计时长：</string>
   <!--When discovering courses, some courses have an externally hosted video that describes it.
@@ -32,6 +32,13 @@
   <string name="view_all_subjects" tools:ignore="MissingTranslation">查看所有科目</string>
   <!--Label for searching subjects-->
   <string name="search_subjects" tools:ignore="MissingTranslation">搜索科目</string>
+  <!--Google Cast-->
+  <!--Description of a button that will cast/un-cast the app to a remote device-->
+  <string name="media_route_menu_title" tools:ignore="MissingTranslation">播放到…</string>
+  <!--Google cast Introduction title-->
+  <string name="introducing_cast_text" tools:ignore="MissingTranslation">Cast 简介</string>
+  <!--Text to describe that video is casting on the remote device-->
+  <string name="remote_device_casting_message" tools:ignore="MissingTranslation">视频将投射到远程设备上</string>
   <!--Course Sharing-->
   <!--Description of button that will open the share course menu-->
   <string name="share_course_button">分享课程</string>
@@ -87,9 +94,9 @@
   <!--Label for End User License Agreement-->
   <string name="licensing_agreement" tools:ignore="MissingTranslation">{platform_name}用户协议</string>
   <!--Label for Terms of Service and Honor Code-->
-  <string name="tos_and_honor_code">{platform_name}免责声明</string>
+  <string name="tos_and_honor_code" tools:ignore="MissingTranslation">{platform_name}免责声明</string>
   <!--Label for Privacy Policy-->
-  <string name="privacy_policy">隐私政策</string>
+  <string name="privacy_policy" tools:ignore="MissingTranslation">隐私政策</string>
   <string name="login_title">登录</string>
   <!--Accessible content description of close button on Sign in and Sign up screen-->
   <string name="close">关闭</string>
@@ -97,17 +104,17 @@
   <string name="dropdown_list_prefix">下拉列表。</string>
   <!--Navigation Drawer Labels-->
   <!--Button text to show user current downloads screen-->
-  <string name="label_current_downloads">查看当前下载</string>
+  <string name="label_current_downloads" tools:ignore="MissingTranslation">查看当前下载</string>
   <!--Content description for edit profile button-->
   <string name="open_profile_button">打开您的用户资料</string>
   <!--Title of user's course list screen-->
-  <string name="label_my_courses">课程</string>
+  <string name="label_my_courses" tools:ignore="MissingTranslation">课程</string>
   <!--Title of user's program list screen-->
   <string name="label_my_programs" tools:ignore="MissingTranslation">学习计划</string>
   <!--Title of native Find Courses Screen-->
   <string name="label_find_courses">发现课程</string>
   <!--Title of webview based Find Courses Screen-->
-  <string name="label_discover">探索</string>
+  <string name="label_discover" tools:ignore="MissingTranslation">探索</string>
   <!--Title of Degrees tab on Discovery screen-->
   <string name="label_degrees" tools:ignore="MissingTranslation">学位</string>
   <!--Title of Find Courses tab on Main Dashboard screen-->
@@ -125,9 +132,9 @@
   <!--Settings screen version-->
   <string name="label_version">应用版本</string>
   <!--Button text to show user Settings screen-->
-  <string name="label_settings">设置</string>
+  <string name="label_settings" tools:ignore="MissingTranslation">设置</string>
   <!--Title of Account screen-->
-  <string name="title_account">账号</string>
+  <string name="title_account" tools:ignore="MissingTranslation">账号</string>
   <!--Help Dialog Place Holder messages-->
   <!--Reset password alert dialog title-->
   <string name="confirm_dialog_title_help">重置密码</string>
@@ -156,7 +163,7 @@
   <string name="end_user_title" tools:ignore="MissingTranslation">用户协议</string>
   <!--Title of privacy policy users must accept to use the app-->
   <!--Title of terms of service & honor code users must accept to use the app-->
-  <string name="terms_of_service_title">免责声明</string>
+  <string name="terms_of_service_title" tools:ignore="MissingTranslation">免责声明</string>
   <!--My Courses-->
   <!--Row of course on dashboard screen-->
   <string name="courseware_title">课程</string>
@@ -164,9 +171,9 @@
   <!--NOTE: TODO - not final one-->
   <string name="courseware_subtitle">查看课程视频和作业</string>
   <!--Row title of videos on dashboard screen-->
-  <string name="videos_title">视频</string>
+  <string name="videos_title" tools:ignore="MissingTranslation">视频</string>
   <!--Row subtitle of videos on dashboard screen-->
-  <string name="videos_subtitle">观看课程视频</string>
+  <string name="videos_subtitle" tools:ignore="MissingTranslation">观看课程视频</string>
   <!--Row of Discussion on dashboard screen-->
   <string name="discussion_title">讨论</string>
   <!--Row of Discussion on dashboard screen-->
@@ -180,24 +187,24 @@
   <!--Row of announcement on dashboard screen-->
   <string name="announcement_title">公告</string>
   <!--Title text for the important dates section on the course dashboard-->
-  <string name="course_dates_title">重要日期</string>
+  <string name="course_dates_title" tools:ignore="MissingTranslation">重要日期</string>
   <!--Title text for the additional resources section on the tabular course dashboard-->
-  <string name="resources_title">资源</string>
+  <string name="resources_title" tools:ignore="MissingTranslation">资源</string>
   <!--Row of announcement on dashboard screen-->
   <!--NOTE: TODO - not final one-->
   <string name="announcement_subtitle">及时了解最新动态</string>
   <!--Subtitle text describing the important dates section on the course dashboard-->
-  <string name="course_dates_subtitle">注意截止日期并保持进度</string>
+  <string name="course_dates_subtitle" tools:ignore="MissingTranslation">注意截止日期并保持进度</string>
   <!--Accessible content description of course name label field-->
   <string name="course_name">课程名称</string>
   <!--Label indicating new course content has been downloaded-->
   <string name="new_course_content">新的课程内容</string>
   <!--Label for date when course starts-->
-  <string name="label_starting">即将于{date}开始</string>
+  <string name="label_starting" tools:ignore="MissingTranslation">即将于{date}开始</string>
   <!--Label for course that has ended-->
-  <string name="label_ended">{date}已结束</string>
+  <string name="label_ended" tools:ignore="MissingTranslation">{date}已结束</string>
   <!--Label for date when course is ending-->
-  <string name="label_ending">将于{date}结束</string>
+  <string name="label_ending" tools:ignore="MissingTranslation">将于{date}结束</string>
   <!--Label for date when course is expiring in a specific time frame like in 2 days-->
   <string name="label_expires" tools:ignore="MissingTranslation">课程截止日期 {date}</string>
   <!--Label for date when course is expiring on a specific date like on December 5-->
@@ -216,7 +223,7 @@
   <!--Label shown when no courseware content is available-->
   <string name="no_chapter_text">当前没有可用的课程内容。</string>
   <!--Label shown when no mobile-friendly videos are available in a course-->
-  <string name="no_videos_text">此课程没有任何视频。</string>
+  <string name="no_videos_text" tools:ignore="MissingTranslation">此课程没有任何视频。</string>
   <!--Label shown when user is enrolled in no courses-->
   <string name="no_courses_to_display">您还没有加入任何课程</string>
   <!--Label shown when no announcements are available for a course-->
@@ -224,13 +231,20 @@
   <!--Label shown when no handouts are available for a course-->
   <string name="no_handouts_to_display">本课程现在尚无任何讲义。</string>
   <!--Label shown when no important dates are available for a course-->
-  <string name="no_course_dates_to_display">课程日期当前不可用。</string>
+  <string name="no_course_dates_to_display" tools:ignore="MissingTranslation">课程日期当前不可用。</string>
   <!--Title of the screen where user can delete videos-->
-  <string name="delete_videos_title">删除视频</string>
+  <string name="delete_videos_title" tools:ignore="MissingTranslation">删除视频</string>
   <!--Label for a course item's due date for same day-->
-  <string name="due_date_today">截止日期为 {due_date}</string>
+  <string name="due_date_today" tools:ignore="MissingTranslation">截止日期为 {due_date}</string>
   <!--Label for a course item's due date-->
-  <string name="due_date_past_future">{due_date} 截止</string>
+  <string name="due_date_past_future" tools:ignore="MissingTranslation">{due_date} 截止</string>
+  <!--Upgrade banner's description which appears on course outline screen.-->
+  <string name="upgrade_banner_description" tools:ignore="MissingTranslation">随时随地可完成评估，获得证书！</string>
+  <!--Title upgrade to verified today course outline footer-->
+  <string name="upgrade_to_verified_today_title" tools:ignore="MissingTranslation">立即升级到已验证状态</string>
+  <!--Title of place order for course upgrade screen-->
+  <string name="place_order_title" tools:ignore="MissingTranslation">下订单</string>
+  <!--Mobile Payments-->
   <!--Discussion Topics-->
   <!--Label for the discussion topics page-->
   <string name="discussion_topics_title">讨论话题</string>
@@ -361,10 +375,18 @@
   <string name="assessment_soon">很快</string>
   <!--Label to notify user to rotate device for viewing a video in full screen-->
   <string name="assessment_rotate_for_fullscreen">旋转您的设备，以全屏模式观看此视频。</string>
+  <!--Label showing only when youtube in-app player produce error-->
+  <string name="assessment_unable_to_play_video" tools:ignore="MissingTranslation">播放器错误</string>
+  <!--Error message showing only when youtube in-app player produce error-->
+  <string name="assessment_unable_to_play_video_message" tools:ignore="MissingTranslation">无法播放此视频。您可以在 YouTube 应用上观看，或稍后再试。</string>
   <!--Label showing only youtube is available-->
   <string name="assessment_only_on_youtube">此视频只能在 YouTube 中播放。</string>
   <!--Label for button to open on youtube-->
   <string name="assessment_open_on_youtube">在 YouTube 上观看视频</string>
+  <!--Label showing that you need to update youtube app in order to watch the video-->
+  <string name="assessment_needed_updating_youtube" tools:ignore="MissingTranslation">此视频要求您更新 YouTube 应用。</string>
+  <!--Label for button to update youtube app-->
+  <string name="assessment_update_youtube" tools:ignore="MissingTranslation">更新 YouTube</string>
   <!--Video List-->
   <!--Title of video download screen-->
   <string name="title_download">下载</string>
@@ -397,29 +419,29 @@
   <string name="no_connectivity">连接错误</string>
   <!--Bulk Videos Download-->
   <!--Accessibility label of bulk download switch-->
-  <string name="bulk_download_switch">批量视频下载按钮。</string>
+  <string name="bulk_download_switch" tools:ignore="MissingTranslation">批量视频下载按钮。</string>
   <!--Title for bulk videos download view when in new or partial videos' download state-->
-  <string name="download_to_device">下载至设备中</string>
+  <string name="download_to_device" tools:ignore="MissingTranslation">下载至设备中</string>
   <!--Subtitle for bulk videos download view when in new or partial videos' download state-->
   <plurals name="download_total">
     <item quantity="other">{total_videos_count}个视频，总共{total_videos_size}</item>
   </plurals>
   <!--Title for bulk videos download view when download is starting-->
-  <string name="download_starting">正在开始下载...</string>
+  <string name="download_starting" tools:ignore="MissingTranslation">正在开始下载...</string>
   <!--Title for bulk videos download view when in downloading state-->
-  <string name="downloading_videos">正在下载视频...</string>
+  <string name="downloading_videos" tools:ignore="MissingTranslation">正在下载视频...</string>
   <!--Subtitle for bulk videos download view when in downloading state-->
-  <string name="download_remaining">剩余{remaining_videos_count}个视频，总共{remaining_videos_size}</string>
+  <string name="download_remaining" tools:ignore="MissingTranslation">剩余{remaining_videos_count}个视频，总共{remaining_videos_size}</string>
   <!--Title for bulk videos download view when in downloaded state-->
-  <string name="download_complete">已下载所有视频</string>
+  <string name="download_complete" tools:ignore="MissingTranslation">已下载所有视频</string>
   <!--Accessibility label of bulk download switch, when its state is OFF and no download is happening-->
-  <string name="switch_off_no_downloading">滑动开关，您将下载所有课程视频。</string>
+  <string name="switch_off_no_downloading" tools:ignore="MissingTranslation">滑动开关，您将下载所有课程视频。</string>
   <!--Accessibility label of bulk download switch, when its state is ON and all videos are downloading-->
-  <string name="switch_on_all_downloading">关闭开关，将取消您下载的所有视频和删除已下载视频。</string>
+  <string name="switch_on_all_downloading" tools:ignore="MissingTranslation">关闭开关，将取消您下载的所有视频和删除已下载视频。</string>
   <!--Accessibility label of bulk download switch, when its state is ON and all videos have been downloaded-->
-  <string name="switch_on_all_downloaded">关闭开关，将删除您的已下载视频。</string>
+  <string name="switch_on_all_downloaded" tools:ignore="MissingTranslation">关闭开关，将删除您的已下载视频。</string>
   <!--Accessibility label of full bulk download view when videos are being downloaded-->
-  <string name="view_downloads">双击查看当前下载</string>
+  <string name="view_downloads" tools:ignore="MissingTranslation">双击查看当前下载</string>
   <!--Wifi New Message-->
   <!--Toggle to allow downloads using cellular data-->
   <string name="allow">允许</string>
@@ -467,7 +489,7 @@
   <!--Error shown when user attempts to send email, but has no email app-->
   <string name="email_client_not_present">未安装任何邮箱客户端</string>
   <!--Search for a course prompt-->
-  <string name="search_for_courses">搜索课程</string>
+  <string name="search_for_courses" tools:ignore="MissingTranslation">搜索课程</string>
   <!--Search for a program prompt-->
   <string name="search_for_programs" tools:ignore="MissingTranslation">查询专项</string>
   <!--Search for a degree prompt-->
@@ -482,13 +504,13 @@
   <string name="or_register_with_email">或用邮箱注册</string>
   <!--New Logistration Launch screen text-->
   <!--Button leading user to create account screen-->
-  <string name="launch_register">创建账号</string>
+  <string name="launch_register" tools:ignore="MissingTranslation">创建账号</string>
   <!--Button leading user to log in screen-->
-  <string name="launch_login">登录</string>
+  <string name="launch_login" tools:ignore="MissingTranslation">登录</string>
   <!--Introduction text on the launch screen-->
   <string name="launch_text" tools:ignore="MissingTranslation">世界最好大学的课程都在你掌中</string>
   <!--Search view leading user to Find Courses screen from the launch screen upon searching some text-->
-  <string name="launch_search_courses">搜索课程</string>
+  <string name="launch_search_courses" tools:ignore="MissingTranslation">搜索课程</string>
   <!--Registration Screen-->
   <!--Button text allowing user to show hidden optional registration fields-->
   <string name="show_optional_text">显示可选信息</string>
