--- a/OpenEdXMobile/res/values-vi/strings.xml
+++ b/OpenEdXMobile/res/values-vi/strings.xml
@@ -11,7 +11,7 @@
   <!--Enroll Now button text-->
   <string name="enroll_now_button_text">Đăng ký ngay</string>
   <!--Invitation Only button text-->
-  <string name="invitation_only_button_text">Chỉ được mời</string>
+  <string name="invitation_only_button_text" tools:ignore="MissingTranslation">Chỉ được mời</string>
   <!--Effort field name-->
   <string name="effort_field_name">Lần thử:</string>
   <!--When discovering courses, some courses have an externally hosted video that describes it.
@@ -34,8 +34,11 @@
   <string name="search_subjects" tools:ignore="MissingTranslation">Tìm Môn học</string>
   <!--Google Cast-->
   <!--Description of a button that will cast/un-cast the app to a remote device-->
+  <string name="media_route_menu_title" tools:ignore="MissingTranslation">Phát trên...</string>
   <!--Google cast Introduction title-->
+  <string name="introducing_cast_text" tools:ignore="MissingTranslation">Giới thiệu Cast</string>
   <!--Text to describe that video is casting on the remote device-->
+  <string name="remote_device_casting_message" tools:ignore="MissingTranslation">Đang phát video đến một thiết bị từ xa</string>
   <!--Course Sharing-->
   <!--Description of button that will open the share course menu-->
   <string name="share_course_button">Chia sẻ khóa học</string>
@@ -91,9 +94,9 @@
   <!--Label for End User License Agreement-->
   <string name="licensing_agreement" tools:ignore="MissingTranslation">{platform_name} Người dùng đồng ý với Giấy phép</string>
   <!--Label for Terms of Service and Honor Code-->
-  <string name="tos_and_honor_code">{platform_name} Điều khoản dịch vụ và Honor Code</string>
+  <string name="tos_and_honor_code" tools:ignore="MissingTranslation">{platform_name} Điều khoản dịch vụ và Honor Code</string>
   <!--Label for Privacy Policy-->
-  <string name="privacy_policy">Chính sách Bảo mật</string>
+  <string name="privacy_policy" tools:ignore="MissingTranslation">Chính sách Bảo mật</string>
   <string name="login_title">Đăng nhập</string>
   <!--Accessible content description of close button on Sign in and Sign up screen-->
   <string name="close">Đóng</string>
@@ -101,17 +104,17 @@
   <string name="dropdown_list_prefix">Danh sách xổ xuống.</string>
   <!--Navigation Drawer Labels-->
   <!--Button text to show user current downloads screen-->
-  <string name="label_current_downloads">Xem các mục đang tải xuống</string>
+  <string name="label_current_downloads" tools:ignore="MissingTranslation">Xem các mục đang tải xuống</string>
   <!--Content description for edit profile button-->
   <string name="open_profile_button">Mở hồ sơ của bạn</string>
   <!--Title of user's course list screen-->
-  <string name="label_my_courses">Khóa học</string>
+  <string name="label_my_courses" tools:ignore="MissingTranslation">Khóa học</string>
   <!--Title of user's program list screen-->
   <string name="label_my_programs" tools:ignore="MissingTranslation">Chương trình</string>
   <!--Title of native Find Courses Screen-->
   <string name="label_find_courses">Tìm khóa học</string>
   <!--Title of webview based Find Courses Screen-->
-  <string name="label_discover">Khám phá</string>
+  <string name="label_discover" tools:ignore="MissingTranslation">Khám phá</string>
   <!--Title of Degrees tab on Discovery screen-->
   <string name="label_degrees" tools:ignore="MissingTranslation">Bằng cấp</string>
   <!--Title of Find Courses tab on Main Dashboard screen-->
@@ -129,9 +132,9 @@
   <!--Settings screen version-->
   <string name="label_version">Phiên bản ứng dụng</string>
   <!--Button text to show user Settings screen-->
-  <string name="label_settings">Cài đặt</string>
+  <string name="label_settings" tools:ignore="MissingTranslation">Cài đặt</string>
   <!--Title of Account screen-->
-  <string name="title_account">Tài khoản</string>
+  <string name="title_account" tools:ignore="MissingTranslation">Tài khoản</string>
   <!--Help Dialog Place Holder messages-->
   <!--Reset password alert dialog title-->
   <string name="confirm_dialog_title_help">Đặt lại mật khẩu</string>
@@ -160,7 +163,7 @@ Nếu bạn vẫn chưa nhận được sau ít phút, hãy kiểm tra thư mụ
   <string name="end_user_title" tools:ignore="MissingTranslation">Thỏa thuận người dùng cấp phép</string>
   <!--Title of privacy policy users must accept to use the app-->
   <!--Title of terms of service & honor code users must accept to use the app-->
-  <string name="terms_of_service_title">Điều khoản dịch vụ</string>
+  <string name="terms_of_service_title" tools:ignore="MissingTranslation">Điều khoản dịch vụ</string>
   <!--My Courses-->
   <!--Row of course on dashboard screen-->
   <string name="courseware_title">Khóa học</string>
@@ -168,9 +171,9 @@ Nếu bạn vẫn chưa nhận được sau ít phút, hãy kiểm tra thư mụ
   <!--NOTE: TODO - not final one-->
   <string name="courseware_subtitle">Truy cập video và bài tập</string>
   <!--Row title of videos on dashboard screen-->
-  <string name="videos_title">Video</string>
+  <string name="videos_title" tools:ignore="MissingTranslation">Video</string>
   <!--Row subtitle of videos on dashboard screen-->
-  <string name="videos_subtitle">Xem video khóa học</string>
+  <string name="videos_subtitle" tools:ignore="MissingTranslation">Xem video khóa học</string>
   <!--Row of Discussion on dashboard screen-->
   <string name="discussion_title">Thảo luận</string>
   <!--Row of Discussion on dashboard screen-->
@@ -184,24 +187,24 @@ Nếu bạn vẫn chưa nhận được sau ít phút, hãy kiểm tra thư mụ
   <!--Row of announcement on dashboard screen-->
   <string name="announcement_title">Thông báo</string>
   <!--Title text for the important dates section on the course dashboard-->
-  <string name="course_dates_title">Những ngày quan trọng</string>
+  <string name="course_dates_title" tools:ignore="MissingTranslation">Những ngày quan trọng</string>
   <!--Title text for the additional resources section on the tabular course dashboard-->
-  <string name="resources_title">Nguồn</string>
+  <string name="resources_title" tools:ignore="MissingTranslation">Nguồn</string>
   <!--Row of announcement on dashboard screen-->
   <!--NOTE: TODO - not final one-->
   <string name="announcement_subtitle">Cập nhật những tin tức mới nhất</string>
   <!--Subtitle text describing the important dates section on the course dashboard-->
-  <string name="course_dates_subtitle">Theo dõi và bám sát deadline</string>
+  <string name="course_dates_subtitle" tools:ignore="MissingTranslation">Theo dõi và bám sát deadline</string>
   <!--Accessible content description of course name label field-->
   <string name="course_name">Tên khóa học</string>
   <!--Label indicating new course content has been downloaded-->
   <string name="new_course_content">Nội dung khóa học mới</string>
   <!--Label for date when course starts-->
-  <string name="label_starting">Bắt đầu {date}</string>
+  <string name="label_starting" tools:ignore="MissingTranslation">Bắt đầu {date}</string>
   <!--Label for course that has ended-->
-  <string name="label_ended">Đã kết thúc {date}</string>
+  <string name="label_ended" tools:ignore="MissingTranslation">Đã kết thúc {date}</string>
   <!--Label for date when course is ending-->
-  <string name="label_ending">Kết thúc {date}</string>
+  <string name="label_ending" tools:ignore="MissingTranslation">Kết thúc {date}</string>
   <!--Label for date when course is expiring in a specific time frame like in 2 days-->
   <string name="label_expires" tools:ignore="MissingTranslation">Khóa học hết hạn tham gia {date}</string>
   <!--Label for date when course is expiring on a specific date like on December 5-->
@@ -220,7 +223,7 @@ Nếu bạn vẫn chưa nhận được sau ít phút, hãy kiểm tra thư mụ
   <!--Label shown when no courseware content is available-->
   <string name="no_chapter_text">Nội dung khóa học hiện chưa sẵn sàng</string>
   <!--Label shown when no mobile-friendly videos are available in a course-->
-  <string name="no_videos_text">Khóa học này không có video.</string>
+  <string name="no_videos_text" tools:ignore="MissingTranslation">Khóa học này không có video.</string>
   <!--Label shown when user is enrolled in no courses-->
   <string name="no_courses_to_display">Có vẻ như bạn chưa tham gia khóa học nào.</string>
   <!--Label shown when no announcements are available for a course-->
@@ -228,16 +231,20 @@ Nếu bạn vẫn chưa nhận được sau ít phút, hãy kiểm tra thư mụ
   <!--Label shown when no handouts are available for a course-->
   <string name="no_handouts_to_display">Khóa học này hiện tại không có tư liệu nào.</string>
   <!--Label shown when no important dates are available for a course-->
-  <string name="no_course_dates_to_display">Khóa học hiện tại không có ngày nào cần chú ý.</string>
+  <string name="no_course_dates_to_display" tools:ignore="MissingTranslation">Khóa học hiện tại không có ngày nào cần chú ý.</string>
   <!--Title of the screen where user can delete videos-->
-  <string name="delete_videos_title">Xóa video</string>
+  <string name="delete_videos_title" tools:ignore="MissingTranslation">Xóa video</string>
   <!--Label for a course item's due date for same day-->
-  <string name="due_date_today">Hết hạn hôm nay vào {due_date}</string>
+  <string name="due_date_today" tools:ignore="MissingTranslation">Hết hạn hôm nay vào {due_date}</string>
   <!--Label for a course item's due date-->
-  <string name="due_date_past_future">Hết hạn {due_date}</string>
+  <string name="due_date_past_future" tools:ignore="MissingTranslation">Hết hạn {due_date}</string>
   <!--Upgrade banner's description which appears on course outline screen.-->
+  <string name="upgrade_banner_description" tools:ignore="MissingTranslation">Hoàn thành các bài đánh giá khi đang di chuyển để đạt được chứng nhận!</string>
   <!--Title upgrade to verified today course outline footer-->
+  <string name="upgrade_to_verified_today_title" tools:ignore="MissingTranslation">Nâng cấp ngay lên đã xác minh</string>
   <!--Title of place order for course upgrade screen-->
+  <string name="place_order_title" tools:ignore="MissingTranslation">Đặt hàng</string>
+  <!--Mobile Payments-->
   <!--Discussion Topics-->
   <!--Label for the discussion topics page-->
   <string name="discussion_topics_title">Nội dung thảo luận</string>
@@ -368,10 +375,18 @@ Nếu bạn vẫn chưa nhận được sau ít phút, hãy kiểm tra thư mụ
   <string name="assessment_soon">Không lâu</string>
   <!--Label to notify user to rotate device for viewing a video in full screen-->
   <string name="assessment_rotate_for_fullscreen">Xoay thiết bị của bạn để xem video toàn màn hình.</string>
+  <!--Label showing only when youtube in-app player produce error-->
+  <string name="assessment_unable_to_play_video" tools:ignore="MissingTranslation">Lỗi trình phát</string>
+  <!--Error message showing only when youtube in-app player produce error-->
+  <string name="assessment_unable_to_play_video_message" tools:ignore="MissingTranslation">Không thể phát video này. Bạn có thể xem video trên ứng dụng YouTube hoặc thử lại sau.</string>
   <!--Label showing only youtube is available-->
   <string name="assessment_only_on_youtube">Video này chỉ có thể xem trên YouTube</string>
   <!--Label for button to open on youtube-->
   <string name="assessment_open_on_youtube">Xem video trên YouTube</string>
+  <!--Label showing that you need to update youtube app in order to watch the video-->
+  <string name="assessment_needed_updating_youtube" tools:ignore="MissingTranslation">Video này yêu cầu bạn cập nhật ứng dụng YouTube.</string>
+  <!--Label for button to update youtube app-->
+  <string name="assessment_update_youtube" tools:ignore="MissingTranslation">Cập nhật YouTube</string>
   <!--Video List-->
   <!--Title of video download screen-->
   <string name="title_download">Tải xuống</string>
@@ -404,29 +419,29 @@ Nếu bạn vẫn chưa nhận được sau ít phút, hãy kiểm tra thư mụ
   <string name="no_connectivity">Lỗi kết nối</string>
   <!--Bulk Videos Download-->
   <!--Accessibility label of bulk download switch-->
-  <string name="bulk_download_switch">Chuyển đổi video số lượng lớn.</string>
+  <string name="bulk_download_switch" tools:ignore="MissingTranslation">Chuyển đổi video số lượng lớn.</string>
   <!--Title for bulk videos download view when in new or partial videos' download state-->
-  <string name="download_to_device">Tải về thiết bị</string>
+  <string name="download_to_device" tools:ignore="MissingTranslation">Tải về thiết bị</string>
   <!--Subtitle for bulk videos download view when in new or partial videos' download state-->
   <plurals name="download_total">
     <item quantity="other">{total_videos_count} Video, {total_videos_size} tổng cộng</item>
   </plurals>
   <!--Title for bulk videos download view when download is starting-->
-  <string name="download_starting">Bắt đầu tải xuống...</string>
+  <string name="download_starting" tools:ignore="MissingTranslation">Bắt đầu tải xuống...</string>
   <!--Title for bulk videos download view when in downloading state-->
-  <string name="downloading_videos">Đang tải video xuống...</string>
+  <string name="downloading_videos" tools:ignore="MissingTranslation">Đang tải video xuống...</string>
   <!--Subtitle for bulk videos download view when in downloading state-->
-  <string name="download_remaining">{remaining_videos_count} còn lại, {remaining_videos_size} tổng cộng</string>
+  <string name="download_remaining" tools:ignore="MissingTranslation">{remaining_videos_count} còn lại, {remaining_videos_size} tổng cộng</string>
   <!--Title for bulk videos download view when in downloaded state-->
-  <string name="download_complete">Tất cả video đã được tải xuống</string>
+  <string name="download_complete" tools:ignore="MissingTranslation">Tất cả video đã được tải xuống</string>
   <!--Accessibility label of bulk download switch, when its state is OFF and no download is happening-->
-  <string name="switch_off_no_downloading">Khi bật, tất cả video trong khóa học sẽ được tải xuống.</string>
+  <string name="switch_off_no_downloading" tools:ignore="MissingTranslation">Khi bật, tất cả video trong khóa học sẽ được tải xuống.</string>
   <!--Accessibility label of bulk download switch, when its state is ON and all videos are downloading-->
-  <string name="switch_on_all_downloading">Khi tắt, dừng tải xuống tất cả video và xóa tất cả video đã tải xuống trong khóa học.</string>
+  <string name="switch_on_all_downloading" tools:ignore="MissingTranslation">Khi tắt, dừng tải xuống tất cả video và xóa tất cả video đã tải xuống trong khóa học.</string>
   <!--Accessibility label of bulk download switch, when its state is ON and all videos have been downloaded-->
-  <string name="switch_on_all_downloaded">Khi tắt, tất cả các video trong khóa học đã tải xuống sẽ bị xóa.</string>
+  <string name="switch_on_all_downloaded" tools:ignore="MissingTranslation">Khi tắt, tất cả các video trong khóa học đã tải xuống sẽ bị xóa.</string>
   <!--Accessibility label of full bulk download view when videos are being downloaded-->
-  <string name="view_downloads">Nhấn hai lần để xem những mục đang tải xuống.</string>
+  <string name="view_downloads" tools:ignore="MissingTranslation">Nhấn hai lần để xem những mục đang tải xuống.</string>
   <!--Wifi New Message-->
   <!--Toggle to allow downloads using cellular data-->
   <string name="allow">Cho phép</string>
@@ -474,7 +489,7 @@ Nếu bạn vẫn chưa nhận được sau ít phút, hãy kiểm tra thư mụ
   <!--Error shown when user attempts to send email, but has no email app-->
   <string name="email_client_not_present">Không tìm thấy ứng dụng e-mail nào </string>
   <!--Search for a course prompt-->
-  <string name="search_for_courses">Tìm khóa học</string>
+  <string name="search_for_courses" tools:ignore="MissingTranslation">Tìm khóa học</string>
   <!--Search for a program prompt-->
   <string name="search_for_programs" tools:ignore="MissingTranslation">Tìm chương trình</string>
   <!--Search for a degree prompt-->
@@ -489,13 +504,13 @@ Nếu bạn vẫn chưa nhận được sau ít phút, hãy kiểm tra thư mụ
   <string name="or_register_with_email">hoặc đăng ký với email</string>
   <!--New Logistration Launch screen text-->
   <!--Button leading user to create account screen-->
-  <string name="launch_register">Tạo Tài khoản</string>
+  <string name="launch_register" tools:ignore="MissingTranslation">Tạo Tài khoản</string>
   <!--Button leading user to log in screen-->
-  <string name="launch_login">Đăng nhập</string>
+  <string name="launch_login" tools:ignore="MissingTranslation">Đăng nhập</string>
   <!--Introduction text on the launch screen-->
   <string name="launch_text" tools:ignore="MissingTranslation">Những khóa học từ các trường Đại học hàng đầu đã nằm trong tầm tay.</string>
   <!--Search view leading user to Find Courses screen from the launch screen upon searching some text-->
-  <string name="launch_search_courses">Tìm khóa học</string>
+  <string name="launch_search_courses" tools:ignore="MissingTranslation">Tìm khóa học</string>
   <!--Registration Screen-->
   <!--Button text allowing user to show hidden optional registration fields-->
   <string name="show_optional_text">Hiển thị những trường tùy chọn</string>
